--- a/index.html
+++ b/index.html
@@ -1,53 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Test</title>
-  <!-- Requred meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shink-to-fir=no">
+	<title>A collection of Repos</title>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="with=device-with, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  
+	<!-- Bootstrap v4.5 -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+	<!-- Style -->
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-
-<div class="container">
-	<h1><img src="CydiaIcon.png"> Test</h1>
-</div>
-
-<div class="container">
-	<div class="well">
-		<p><span class="text-primary"><b>Test</span></b> is a Cydia repository template.</p>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://supermamon.github.io/Test/">Add to Cydia</a>
+<!-- Navbar -->
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark repo-navbar">
+	<div class="container">
+		<a class="navbar-brand"> >> Datacaviar ~</a>
+		</div>
 	</div>
-</div>
+</nav>
 
-<div class="container">
-  <h3 id="wells" class="page-header">Featured Packages</h3>
-</div>
-
-<div class="container">
-	<div class="panel panel-default">
-	  <div class="panel-heading">Old Package</div>
-	  <div class="panel-body">
-		This is a sample package with minimal information.
-		It also simulates an old package that's incompatible only with iOS lower than 7.0.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info</a>
-	  </div>
+<!-- Main Container -->
+<div class="container-fluid">
+	
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container text-center">
+			<h1 class="display-4">Datacaviar's Repo</h1>
+			<p class="lead">This is a collection of my favorite repos.</p>
+			<hr class="my-4">
+			<p class="lead"><span class="warning-lead">Disclaimer:</span> This is for personal use but feel free to use at your own risk, all credits go to their respective owners.</p>
+			<a class="btn btn-outline-info btn-outline-info-g btn-lg" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://datacaviar.github.io">Add Repo</a>
+			<a class="btn btn-outline-info btn-outline-info-b btn-lg" href="cdepictions/?p=com.supermamon.newpackage">Packages</a>
+		</div>
 	</div>
 
-	<div class="panel panel-default">
-	  <div class="panel-heading">New Package</div>
-	  <div class="panel-body">
-		This is a sample package with lots of information.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
-	  </div>
-	</div>
 </div>
-	<!-- Aditional JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
+<!-- Additional JavaScript -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </html>
