--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<hr class="my-4">
 			<p class="lead"><span class="warning-lead">Disclaimer:</span> This is for personal use but feel free to use at your own risk, all credits go to their respective owners.</p>
 			<a class="btn btn-outline-info btn-outline-info-g btn-lg" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://datacaviar.github.io">Add Repo</a>
-			<a class="btn btn-outline-info btn-outline-info-b btn-lg" href="cdepictions/?p=com.supermamon.newpackage">Packages</a>
+			<a class="btn btn-outline-info btn-outline-info-b btn-lg" href="depictions/?p=com.supermamon.newpackage">Packages</a>
 		</div>
 	</div>
 
